# ultrasonic-ranger-demo

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap_addons.sh  bootstrap_kernel_irq.sh  bootstrap_skeletons.sh
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
ranger-can/: CMakeLists.txt
ranger-can/src/: ranger_can.cpp
ranger-k/: .Module.symvers.cmd  .modules.order.cmd  .ranger_k.ko.cmd  .ranger_k.o.cmd  README.md  ranger_k.c  reload_k.sh
ranger-k-test/: CMakeLists.txt  README.md  main.c
ranger-u/: CMakeLists.txt
ranger-u/include/: filter_median.hpp  gpio_line.hpp  pulse_measure.hpp  telemetry.hpp
ranger-u/src/: gpio_line.cpp  main.cpp  pulse_measure.cpp  telemetry.cpp
scripts/: demo_emulation.sh  demo_isotp.sh  poke_line.sh  pulse_gen.sh  pulse_gen_multi.sh  record_traces.sh  run_decider_viz.sh  setup_sim.sh
tools/: demo_decider_viz.py  fanplot.gnuplot
tools/isotp_rx/: CMakeLists.txt
tools/isotp_rx/src/: isotp_rx.cpp
tools/plot/: plot_distances.gp
tools/profile/: perf_record.sh  trace_irq.sh
